--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="shortcut icon" href="assets/img/ico/favicon.png" />
+    <!--  apple-touch-icon -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="assets/img/ico/apple-touch-icon-144-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="assets/img/ico/apple-touch-icon-114-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="assets/img/ico/apple-touch-icon-72-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="assets/img/ico/apple-touch-icon-57-precomposed.png"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:400,300,500,700,900"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- FontAwesome CSS -->
+    <link
+      href="assets/fonts/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <!-- Material Icons CSS -->
+    <link href="assets/fonts/iconfont/material-icons.css" rel="stylesheet" />
+    <!-- materialize -->
+    <link href="assets/materialize/css/materialize.min.css" rel="stylesheet" />
+    <!-- Bootstrap -->
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Style CSS -->
+    <link href="style.css" rel="stylesheet" />
+    <!-- Custom CSS -->
+    <link href="assets/css/custom.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
